# moxie

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_skill.md
.github/workflows/: ci.yml  release.yml
deploy/: com.moxie.serve.plist  moxie.service
docs/: BUILD-PLAN.md  DASHBOARD-PLAN.md  HOSTING.md  HOW_IT_WORKS.md  LAUNCH.md  ROADMAP.md
integrations/moxie-bridge/: SKILL.md
moxie/: __init__.py  __main__.py  actions.py  agent.py  brain.py  cli.py  config.py  connectors.py  dashboard.py  detect.py  documents.py  models.py  providers.py  receipts.py  sampledata.py  secure.py  serve.py  skills.py  snapshot.py  statements.py  storage.py  telegram.py  widgets.py
moxie/seed_skills/: README.md
moxie/seed_skills/cancel-audible/: SKILL.md
moxie/seed_skills/cancel-examplegym/: SKILL.md
moxie/vault/: __init__.py  approval.py  audit.py  policy.py
skills/cancel-amazon-prime/: SKILL.md
skills/cancel-disney-plus/: SKILL.md
skills/cancel-examplegym/: SKILL.md
skills/cancel-netflix/: SKILL.md
skills/cancel-puregym/: SKILL.md
skills/cancel-spotify/: SKILL.md
skills/dispute-natwest/: SKILL.md
tests/: test_actions.py  test_brain.py  test_cli_smoke.py  test_dash_activity.py  test_dash_bank.py  test_dash_chat.py  test_dash_secure.py  test_dashboard.py  test_detect.py  test_detect_more.py  test_documents.py  test_import.py  test_memory.py  test_money_dashboard.py  test_onboarding.py  test_providers.py  test_rate_limit.py  test_receipts.py  test_secure.py  test_serve.py  test_skills_wiring.py  test_snapshot.py  test_statements.py  test_store_robustness.py  test_telegram.py  test_vault.py  test_widgets.py
