[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moxie-agent"
version = "0.3.0"
description = "Moxie — the open-source money agent that acts on your money, only with your approval. Local-first, consent-first."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Moxie contributors" }]
keywords = ["ai-agent", "personal-finance", "open-source", "local-first", "privacy", "subscriptions"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
# Core runs on the standard library alone — the demo needs no third-party packages.
dependencies = []

[project.optional-dependencies]
# Core — including SKILL.md skills — runs on the stdlib alone. Install only what you need:
pdf = ["pypdf>=4.0"]  # bank statement PDF import (moxie scan --pdf)
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]  # photo receipts (local OCR)
browser = ["playwright>=1.40"]  # tier-3 browser automation (run sandboxed!)
secure = ["cryptography>=42.0", "keyring>=24.0"]  # encryption at rest + OS keychain
dev = ["pytest>=7.0", "cryptography>=42.0"]  # cryptography: the cipher tests run in CI

[project.urls]
Homepage = "https://github.com/JacobBrooke1/moxie"
Issues = "https://github.com/JacobBrooke1/moxie/issues"
Security = "https://github.com/JacobBrooke1/moxie/blob/main/SECURITY.md"

[project.scripts]
moxie = "moxie.cli:main"

[tool.setuptools.packages.find]
include = ["moxie*"]

[tool.setuptools.package-data]
# Ship the seed skill library inside the wheel so `pip install moxie-agent`
# users get the merchant know-how, not an empty registry.
moxie = ["seed_skills/*/SKILL.md", "seed_skills/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes. Keep it lean; this isn't a style war.
select = ["E", "F"]
ignore = ["E501"]  # long lines: docstrings and drafts read better unwrapped
